[package]
name = "axum-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asset-pipeline = { path = "../asset-pipeline" }
db = { path = "../db" }
ui-components = { path = "../ui-components" }

axum = "0.6.20"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.33.0", default-features = false, features = ["macros", "fs", "rt-multi-thread"] }
validator = { version = "0.15", features = ["derive"] }
